--- a/maccms10-master/ck/css/yzmplayer.css
+++ b/maccms10-master/ck/css/yzmplayer.css
@@ -2781,7 +2781,7 @@ ul::-webkit-scrollbar-track {
 }
 
 .loading .pic {
-	background: url(https://cdn.jsdelivr.net/gh/irecall/irecall.github.io/maccms10-master/ck/img/loading.gif) no-repeat;
+	background: url(https://gimg2.baidu.com/image_search/src=http%3A%2F%2Fimg.zcool.cn%2Fcommunity%2F0138ff5fa50f0611013fdcc7c8e108.gif&refer=http%3A%2F%2Fimg.zcool.cn&app=2002&size=f9999,10000&q=a80&n=0&g=0n&fmt=auto?sec=1658782117&t=bfdc183d7dfa730e0ba964740b49bf2b) no-repeat;
 	/* background: url(https://cdn.jsdelivr.net/gh/Fog-Forest/Picture-Bed/IMG/20200519223501.gif) no-repeat;
 	background-image: url(https://cdn.jsdelivr.net/gh/Fog-Forest/Picture-Bed/IMG/20200519224135.gif); */
 	width: 80px;
